@@ -1,6 +1,7 @@
 plugins {
     java
-    id("org.graalvm.buildtools.native") version "0.10.2"
+    id("com.github.johnrengelman.shadow") version "8.1.1"
+    id("edu.sc.seis.launch4j") version "3.0.6"
 }
 
 group = "lk.tech"
@@ -9,13 +10,7 @@ description = "tg-controller-client"
 
 java {
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(25))
-    }
-}
-
-configurations {
-    compileOnly {
-        extendsFrom(configurations.annotationProcessor.get())
+        languageVersion.set(JavaLanguageVersion.of(21))
     }
 }
 
@@ -23,60 +18,42 @@ repositories {
     mavenCentral()
 }
 
+tasks.shadowJar {
+    archiveBaseName.set("app")
+    archiveVersion.set("")
+    archiveClassifier.set("")
+}
+
 dependencies {
-    implementation("com.formdev:flatlaf:3.6.2")
-    implementation("com.github.oshi:oshi-core:6.9.1")
     implementation("io.projectreactor.netty:reactor-netty:1.2.11")
     implementation("io.projectreactor:reactor-core:3.7.12")
+
+    implementation("com.formdev:flatlaf:3.6.2")
+    implementation("com.github.oshi:oshi-core:6.9.1")
     implementation("tools.jackson.core:jackson-databind:3.0.2")
+
+    implementation("org.slf4j:slf4j-api:2.0.17")
+    implementation("ch.qos.logback:logback-classic:1.5.21")
 
     compileOnly("org.projectlombok:lombok:1.18.42")
     annotationProcessor("org.projectlombok:lombok:1.18.42")
 }
 
-graalvmNative {
-    metadataRepository {
-        enabled.set(true)
+tasks.register<Exec>("packageExe") {
+    dependsOn(tasks.shadowJar)
+
+    val jarPath = layout.buildDirectory.file("libs/app.jar").get().asFile
+
+    if (!jarPath.exists()) {
+        throw GradleException("JAR not found at $jarPath")
     }
 
-    binaries {
-        named("main") {
-            imageName.set("tg-controller-client")
-
-            mainClass.set("lk.tech.tgcontrollerclient.Main")
-
-            buildArgs.addAll(
-                "--no-fallback",
-                "--enable-url-protocols=http,https",
-                "--enable-native-access=ALL-UNNAMED",
-
-                // Netty MUST be runtime initialized
-                "--initialize-at-run-time=reactor.netty",
-                "--initialize-at-run-time=io.netty",
-
-                // Jackson (динамическое отражение)
-                "--initialize-at-run-time=com.fasterxml.jackson",
-
-                // FlatLaf GUI
-                "--initialize-at-run-time=com.formdev.flatlaf",
-
-                // Твой код
-                "--initialize-at-run-time=lk.tech",
-
-                "-H:+ReportExceptionStackTraces",
-
-//                "--initialize-at-build-time=io.netty.util.AsciiString",
-//                $$"--initialize-at-build-time=io.netty.util.AsciiString$2",
-//                $$"--initialize-at-build-time=io.netty.util.AsciiString$1",
-//                "--initialize-at-build-time=io.netty.util.internal.logging.InternalLogLevel",
-//                "--initialize-at-build-time=java.net.Inet4Address",
-            )
-
-            verbose.set(true)
-        }
-    }
-
-    agent {
-        enabled.set(true)
-    }
+    commandLine(
+        "jpackage",
+        "--name", "MyApp3",
+        "--input", jarPath.parent,     // вот здесь используется
+        "--main-jar", jarPath.name,
+        "--main-class", "lk.tech.tgcontrollerclient.Main",
+        "--type", "exe"
+    )
 }
